new output files with future plans section

--- a/documentation/output/index.html
+++ b/documentation/output/index.html
@@ -29,6 +29,24 @@
   (From within the directory containing your RabbitFish site and config.yaml)
   <br /><code>rabbitfish generatesite</code>
 </p>
+<h3>Plans for the Future</h3>
+<p>
+  <ol>
+    <li>
+      A URL lookup feature for use in templates similar to Django's
+      {% url %} or Flask's url_for().
+    </li>
+    <li>Static file handling.</li>
+    <li>
+      Live previewing of your in-development site using Flask so you don't
+      have to re-generate the site to preview changes that you've made.
+    </li>
+    <li>
+      Flask-based web admin to allow you to edit the content on your site
+      live online and regenerate the files automatically when saving.
+    </li>
+  </ol>
+</p>
 
   </body>
 </html>
